ingress/nginx-ingress/hands-on/streaming-application/stream-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-svc
  labels:
    app: streaming-application
spec:
  type: ClusterIP
  selector:
    app: streaming-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
